[package]
name = "bertrand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.7", features = [ "ws" ] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.213", features = [ "derive" ] }
tokio = { version = "1.41.0", features = [ "macros", "rt-multi-thread", "fs" ] }
tower-http = { version = "0.6.1", features = ["fs"] }
